--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li>
                         <button id="bebidas" class="boton-menu boton-categoria"><i class="bi bi-cup-straw"></i>Bebidas</button></li>
                     <li>
-                        <a class="boton-menu boton-carrito active" href="/carrito.html">
+                        <a class="boton-menu boton-carrito active" href="carrito.html">
                             <i class="bi bi-cart3"></i>Carrito <span id="numerito" class="numerito">0</span>
                         </a>
                     </li>
