--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <i class="bi bi-x-lg"></i>
             </button>
             <header>
-                <img class= "logo" src="./img/coffebar.jpg" alt="">
+                <!-- <img class= "logo" src="./img/coffebar.jpg" alt=""> -->
             </header>
             <nav>
                 <ul class="menu">
