--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon"  href="./img/coffee.ico" type="coffe-ico">
+    <link rel="icon" href="./img/coffee.ico" type="coffe-ico">
 
 </head>
 
 <body>
     <div class="wrapper">
         <header class="header-mobile">
-            <img class= "logo" src="./img/coffebar.jpg" alt="">
+            <img class="logo" src="./img/coffebar.jpg" alt="">
             <button class="open-menu" id="open-menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -26,21 +26,26 @@
                 <i class="bi bi-x-lg"></i>
             </button>
             <header>
-                <!-- <img class= "logo" src="./img/coffebar.jpg" alt=""> -->
+                <img class="logo" src="./img/coffebar.jpg" alt="">
             </header>
             <nav>
                 <ul class="menu">
                     <li>
-                        <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-shop"></i>Todos los productos</button>
+                        <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-shop"></i>Todos los
+                            productos</button>
                     </li>
                     <li>
-                        <button id="cafes e infusiones" class="boton-menu boton-categoria"><i class="bi bi-cup-hot"></i>Cafés e Infusiones</button>
+                        <button id="cafes e infusiones" class="boton-menu boton-categoria"><i
+                                class="bi bi-cup-hot"></i>Cafés e Infusiones</button>
                     </li>
                     <li>
-                        <button id="panaderia" class="boton-menu boton-categoria"><i class="bi bi-cookie"></i>Panadería</button>
+                        <button id="panaderia" class="boton-menu boton-categoria"><i
+                                class="bi bi-cookie"></i>Panadería</button>
                     </li>
                     <li>
-                        <button id="bebidas" class="boton-menu boton-categoria"><i class="bi bi-cup-straw"></i>Bebidas</button></li>
+                        <button id="bebidas" class="boton-menu boton-categoria"><i
+                                class="bi bi-cup-straw"></i>Bebidas</button>
+                    </li>
                     <li>
                         <a class="boton-menu boton-carrito active" href="carrito.html">
                             <i class="bi bi-cart3"></i>Carrito <span id="numerito" class="numerito">0</span>
@@ -55,7 +60,7 @@
         <main>
             <h2 id="titulo-principal" class="titulo-principal">Todos los productos</h2>
             <div id="contenedor-productos" class="contenedor-productos">
-               <!-- Se rellena con JS-->
+                <!-- Se rellena con JS-->
             </div>
         </main>
     </div>
